--- a/Code/HTMLPage.html
+++ b/Code/HTMLPage.html
@@ -4,11 +4,71 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel='stylesheet' href='assets/css/StyleSheet.css'>
-    <title>Lab1</title>
+    <link rel='stylesheet' type="text/css" href='assets/css/StyleSheet.css'>
+    <title>Web Lab1</title>
 </head>
 <body>
+    <header class="header">
+        <nav>Hello, Header!</nav>
+    </header>
 
+    <div class="main_block">
+        <h1 class="content_h1"> Hello, content!</h1>
+        
+        <div class="square"></div>
+
+        <p class="text_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+        when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
+        It has survived not only five centuries, but also the leap into electronic typesetting, 
+        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset 
+        sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus 
+        PageMaker including versions of Lorem Ipsum.</p>
+
+        <a class="href" href="www.csd.tsu.ru">www.csd.tsu.ru</a>
+
+        <section style="margin: 10px 5px;">
+            <article class="content">
+                <h2 class="content_h2"><span style="color:red">Here</span> is the list:</h2>
+                <ul style="margin: 0px">
+                    <li>Value 1</li>
+                    <li>Value 2</li>
+                    <li>Value 3</li>
+                </ul>
+            </article>
+
+            <aside class="asi">
+                <table style="border: solid 1px silver;">
+                    <tr>
+                        <td rowspan="2" style="background-color:green;">1</td>
+                        <td>2</td>
+                        <td>3</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>5</td>
+                    </tr>
+                    <tr>
+                        <td>6</td>
+                        <td colspan="2" style="background-color:red;">7</td>
+                    </tr>
+                </table>
+                <img class="icon" src='assets/img/images.png'>
+            </aside>
+
+            <article class="content">
+                <h1 style="margin:16px 0px 10px;">Here are some visual styles:</h1>
+                <p class="styles"><i>Italic</i><br></p>
+                <p class="styles"><b>Bold</b><br></p>
+                <p class="styles"><u>UnderLined</u><br></p>
+                <p class="styles"><s>Line through</s></p>
+            </article>
+        </section>
+    </div>
+
+    <footer class="footer">
+        Hello, Footer!
+    </footer>
 </body>
 
 </html>
