--- a/Code/HTMLPage.html
+++ b/Code/HTMLPage.html
@@ -25,7 +25,7 @@
         sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus 
         PageMaker including versions of Lorem Ipsum.</p>
 
-        <a class="href" href="www.csd.tsu.ru">www.csd.tsu.ru</a>
+        <a class="href" href="https://www.csd.tsu.ru">www.csd.tsu.ru</a>
 
         <section style="margin: 10px 5px;">
             <article class="content">
