--- a/Code/HTMLPage.html
+++ b/Code/HTMLPage.html
@@ -4,11 +4,43 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel='stylesheet' href='assets/css/StyleSheet.css'>
-    <title></title>
+    <link rel='stylesheet' type="text/css" href='assets/css/StyleSheet.css'>
+    <title>Task 4</title>
 </head>
 <body>
+    <header><img src="assets/img/logo.png"></header>
 
+    <main>
+        <nav>
+            <a href="#">Main page</a>
+            <a href="#">Secondary page</a>
+            <a href="#">Some other page</a>
+            <a href="#">More pages to the god of pages</a>
+            <a href="#">The last page</a>
+        </nav>
+        <div class="content_box">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
+                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
+                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
+                culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor 
+                sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
+                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
+                dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non 
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+        </div>
+
+        <div class="info_box">
+        </div>
+    </main>
+
+    <footer>Footer</footer>
 </body>
 
 </html>
