--- a/Code/index.html
+++ b/Code/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel='stylesheet' type="text/css" href='assets/css/StyleSheet.css'>
+    <link rel='stylesheet' type="text/css" href='assets/css/index.css'>
     <title>Task 3</title>
 </head>
 <body>
