--- a/Code/HTMLPage.html
+++ b/Code/HTMLPage.html
@@ -5,10 +5,102 @@
 <head>
     <meta charset="utf-8" />
     <link rel='stylesheet' href='assets/css/StyleSheet.css'>
-    <title></title>
+    <title>Frontenв Task №6?</title>
 </head>
 <body>
 
+    <div class="news_block">
+
+        <div class="news_content">
+            <h3>Новость 1</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Amet asperiores aut nihil! Corporis debitis labore fugiat id,
+                eligendi ratione veritatis!
+            </p>
+            <button onclick="open_open_('news1')">Открыть всплывающее окно</button>
+        </div>
+        <hr>
+        <div id="news1" class="news_full">
+            <h1>Новость 1</h1>
+            <p>
+                Новость 1: Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Amet asperiores aut nihil! Corporis debitis labore fugiat id,
+                eligendi ratione veritatis!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Aperiam hic, ipsa, ullam, cupiditate eveniet at voluptate
+                corrupti commodi nobis ratione voluptatem! Vel animi totam
+                cupiditate doloribus ad ab exercitationem officia eveniet
+                impedit? Deleniti quasi nisi consectetur perspiciatis quibusdam
+                nostrum, enim perferendis nam, magni molestias recusandae id
+                libero vitae, repudiandae praesentium.
+            </p>
+        </div>
+
+
+        <div class="news_content">
+            <h3>Новость 2</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Amet asperiores aut nihil! Corporis debitis labore fugiat id,
+                eligendi ratione veritatis!
+            </p>
+            <button onclick="open_open_('news2')">Открыть всплывающее окно</button>
+        </div>
+        <hr>
+        <div id="news2" class="news_full">
+            <h1>Новость 2</h1>
+            <p>
+                Новость 2: Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Amet asperiores aut nihil! Corporis debitis labore fugiat id,
+                eligendi ratione veritatis!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Aperiam hic, ipsa, ullam, cupiditate eveniet at voluptate
+                corrupti commodi nobis ratione voluptatem! Vel animi totam
+                cupiditate doloribus ad ab exercitationem officia eveniet
+                impedit? Deleniti quasi nisi consectetur perspiciatis quibusdam
+                nostrum, enim perferendis nam, magni molestias recusandae id
+                libero vitae, repudiandae praesentium.
+            </p>
+        </div>
+
+
+        <div class="news_content">
+            <h3>Новость 3</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Amet asperiores aut nihil! Corporis debitis labore fugiat id,
+                eligendi ratione veritatis!
+            </p>
+            <button onclick="open_open_('news3')">Открыть всплывающее окно</button>
+        </div>
+        <hr>
+        <div id="news3" class="news_full">
+            <h1>Новость 3</h1>
+            <p>
+                Новость 3: Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Amet asperiores aut nihil! Corporis debitis labore fugiat id,
+                eligendi ratione veritatis!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Aperiam hic, ipsa, ullam, cupiditate eveniet at voluptate
+                corrupti commodi nobis ratione voluptatem! Vel animi totam
+                cupiditate doloribus ad ab exercitationem officia eveniet
+                impedit? Deleniti quasi nisi consectetur perspiciatis quibusdam
+                nostrum, enim perferendis nam, magni molestias recusandae id
+                libero vitae, repudiandae praesentium.
+            </p>
+        </div>
+
+    </div>
+
+    <div class="transparent_block"></div>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
