--- a/Code/HTMLPage.html
+++ b/Code/HTMLPage.html
@@ -5,10 +5,23 @@
 <head>
     <meta charset="utf-8" />
     <link rel='stylesheet' href='assets/css/StyleSheet.css'>
-    <title></title>
+    <title>Frontend Task №7?</title>
 </head>
 <body>
 
+    <main>
+        <nav>
+            <button onclick="left_left_()">Левая колонка</button>
+            <button onclick="both_both_()">Обе две</button>
+            <button onclick="right_right_()">Правая колонка</button>
+        </nav>
+
+        <div class="imgs_box">
+            <div id="blue"><img src="assets/img/cat.jpg"></div>
+            <div id="green"><img src="assets/img/dog.jpg"></div>
+        </div>
+    </main>
+    <script src="assets/js/Script.js"></script>
 </body>
 
 </html>
