--- a/Code/HTMLPage.html
+++ b/Code/HTMLPage.html
@@ -5,10 +5,18 @@
 <head>
     <meta charset="utf-8" />
     <link rel='stylesheet' href='assets/css/StyleSheet.css'>
-    <title></title>
+    <title>Frontend Task №8</title>
 </head>
 <body>
 
+    <input id="text_box">
+    <button onclick="show_square()">Квадрат</button>
+    <button onclick="show_trigon()">Треугольник</button>
+    <button onclick="show_circle()">Круг</button>
+
+    <div id="field"></div>
+
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
