--- a/Code/HTMLPage.html
+++ b/Code/HTMLPage.html
@@ -5,10 +5,39 @@
 <head>
     <meta charset="utf-8" />
     <link rel='stylesheet' href='assets/css/StyleSheet.css'>
-    <title></title>
+    <title>Now you see me</title>
 </head>
-<body>
 
+<body>
+    <img id="scena" src="assets/img/scena.jpg" onclick="up_scena()">
+
+
+    <div class="lampa">
+        <img src="assets/img/lampa.png" onclick="light_()">
+        <img id="stick" src="assets/img/stick.png">
+    </div>
+
+
+    <div id="main1">
+        <div class="magic_box_up" onclick="magic_()"></div>
+        <div class="magic_box_up_up" onclick="magic_()"></div>
+    </div>
+
+
+    <div id="trap"></div>
+
+
+    <div id="main">
+        <img id="witch" src="assets/img/witch.jpg">
+
+        <div class="magic_box">
+            <img id="hat" src="assets/img/hat.png">
+            <img id="rabbit" src="assets/img/rabbit.png">
+            <img id="bird" src="assets/img/bird.png">
+        </div>
+    </div>
+
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
